Finished the logic behind selecting the correct answer

--- a/src/components/quizBoxComponent/quizBox.css
+++ b/src/components/quizBoxComponent/quizBox.css
@@ -1,5 +1,5 @@
 .quiz_box {
-  background-color: red;
+  background-color: rgba(154, 212, 149, 0.801);
   width: 50%;
   padding: 1rem;
 }
